# gordonbot

./: .gitignore  CLAUDE.md  WARP.md  codex.yaml  sandbox.py  test_lidar.py  test_orientation_ws.py  test_slam_pose.py  test_slam_ws.py
.codex/: scan.json
code/: test_charge_monitor.py  test_charging_monitor.py  test_motors.py  test_motors_encoders.py
code/old/: test_drive.py  test_motors2.py
docs/: ARCHITECTURE.md  WARP.md  mapping_improvement.md  slam.md
gordonbot-backend/: .env  requirements.txt
gordonbot-backend/.vbackup/: pyvenv.cfg
gordonbot-backend/app/: __init__.py  main.py  schemas.py
gordonbot-dashboard/: .env  .stylelintrc.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
gordonbot-dashboard/src/: App.tsx  index.css
gordonmon/: README.md  go.mod  go.sum  main.go  state.json
ros2_docker/: .dockerignore  Dockerfile  GORDONMON_INTEGRATION.md  QUICKSTART.md  README.md  docker-compose.yml  entrypoint.sh
ros2_docker/bridge_nodes/: package.xml  setup.cfg  setup.py
ros2_docker/bridge_nodes/bridge_nodes/: __init__.py  imu_bridge.py  imu_odom_bridge.py  lidar_bridge.py  map_bridge.py  odom_bridge.py
ros2_docker/config/: cyclonedds.xml  ekf_params.yaml  slam_launch.py  slam_toolbox_params.yaml
sandbox_code/: FEATURES.md  detection_sandbox.py  distance_sandbox.py  encoder_debug.py  encoder_sandbox.py  encoder_test.py  lgpio_sandbox.py  selfdrive_sandbox.py  test_lidar_raw.py
scripts/: bootstrap.sh  dev.sh  power_monitor.sh  project_index.py  run_power_monitor.sh  throttlecheck.sh
(+77 files in other folders)
